--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -2,7 +2,7 @@
 # Name your project! Project names should contain only lowercase characters
 # and underscores. A good package name should reflect your organization's
 # name or the intended use of these models
-name: 'dbt_superstore_project'
+name: 'superstore'
 version: '1.0.0'
 config-version: 2
 
@@ -31,7 +31,8 @@ clean-targets:         # directories to be removed by `dbt clean`
 # directory as views. These settings can be overridden in the individual model
 # files using the `{{ config(...) }}` macro.
 models:
-  dbt_superstore_project:
-    # Config indicated by + and applies to all files under models/example/
-    example:
+  superstore:
+    staging:
       +materialized: view
+    marts:
+      +materialized: table
